Fix minor test issues: disable auditing for test profile, fix confidence score precision, and improve test data consistency

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -81,11 +81,21 @@ spring:
     password: sa
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
   flyway:
-    enabled: true
+    enabled: false
     locations: classpath:db/migration
+  data:
+    jpa:
+      repositories:
+        enabled: true
+      auditing:
+        enabled: false
 
 # PostgreSQL (future) - test
 #spring:
