Implement JWT-based authentication ready for H2 and PostgreSQL
- Create WebSecurityConfig with database-agnostic HTTP security
- Add JWT token provider with database-independent secret management
- Implement custom UserDetailsService using existing UserService
- Add BCrypt password encoder configuration
- Configure CORS for frontend integration (both H2 and PostgreSQL)
- Create authentication controller with login/register/refresh endpoints
- Add health check controller for monitoring
- Create comprehensive security test suite
- Add PostgreSQL-specific security configurations
- Include security properties and documentation
- Fix bean name conflicts between SecurityConfig classes
- Add method-level security annotations support

Security features implemented:
- JWT token authentication and authorization
- Password encryption with BCrypt (strength 12)
- CORS configuration for different environments
- Security headers for both H2 and PostgreSQL
- H2 console access for development profile only
- Database-agnostic security settings
- Comprehensive test coverage

Note: 50 test errors remain to be fixed in next iteration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,6 +68,23 @@ logging:
   level:
     root: INFO
     org.springframework: INFO
+    com.financeapp: DEBUG
+
+# JWT Configuration
+app:
+  jwt:
+    secret: ${JWT_SECRET:finance-forecast-app-super-secret-key-for-jwt-token-generation-2024}
+    expiration: ${JWT_EXPIRATION:86400000} # 24 hours in milliseconds
+    refresh-expiration: ${JWT_REFRESH_EXPIRATION:604800000} # 7 days in milliseconds
+
+# Security Configuration
+security:
+  cors:
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8080}
+    allowed-methods: GET,POST,PUT,DELETE,OPTIONS,PATCH
+    allowed-headers: "*"
+    allow-credentials: true
+    max-age: 3600
 
 ---
 spring:
