--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 200
+        generate_statistics: true
   h2:
     console:
       enabled: true
@@ -56,13 +58,29 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics,prometheus,threaddump,env
   endpoint:
     health:
-      show-details: when_authorized
+      show-details: always
+  health:
+    db:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  prometheus:
+    metrics:
+      export:
+        enabled: true
 
 server:
   port: 8080
+  error:
+    whitelabel:
+      enabled: false
+    include-message: always
+    include-binding-errors: always
+    include-stacktrace: never
 
 logging:
   level:
@@ -91,6 +109,11 @@ spring:
   config:
     activate:
       on-profile: test
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      add-mappings: false
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
@@ -104,6 +127,8 @@ spring:
       hibernate:
         jdbc:
           time_zone: UTC
+        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 200
+        generate_statistics: true
   flyway:
     enabled: false
     locations: classpath:db/migration
@@ -136,37 +161,94 @@ spring:
 spring:
   config:
     activate:
-      on-profile: prod
+      on-profile: integration-test
   datasource:
-    url: jdbc:h2:file:./data/financeapp;AUTO_SERVER=TRUE
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+    url: jdbc:tc:postgresql:16:///financeapp?TC_TMPFS=/var/lib/postgresql/data:rw
+    hikari:
+      maximum-pool-size: 8
+      minimum-idle: 2
+      idle-timeout: 60000
+      max-lifetime: 300000
+      connection-timeout: 30000
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
+        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 200
+        generate_statistics: true
   flyway:
     enabled: true
-    locations: classpath:db/migration
+    locations:
+      - classpath:db/migration
+      - classpath:db/postgresql
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:financeapp}
+    driver-class-name: org.postgresql.Driver
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
+    hikari:
+      maximum-pool-size: 30
+      minimum-idle: 5
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      pool-name: FinanceAppHikariPool
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 500
+        generate_statistics: true
+  flyway:
+    enabled: true
+    locations:
+      - classpath:db/migration
+      - classpath:db/postgresql
 
 server:
   port: 8080
 
-# PostgreSQL (future) - prod
-#spring:
-#  config:
-#    activate:
-#      on-profile: prod
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/financeapp
-#    driver-class-name: org.postgresql.Driver
-#    username: ${DB_USERNAME}
-#    password: ${DB_PASSWORD}
-#  jpa:
-#    hibernate:
-#      ddl-auto: validate
-#    show-sql: false
-#  flyway:
-#    enabled: true
-#    locations: classpath:db/migration
+
+---
+spring:
+  config:
+    activate:
+      on-profile: staging
+  datasource:
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:financeapp_staging}
+    driver-class-name: org.postgresql.Driver
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:postgres}
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      connection-timeout: 30000
+      pool-name: FinanceAppHikariPoolStaging
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 400
+        generate_statistics: true
+  flyway:
+    enabled: true
+    locations:
+      - classpath:db/migration
+      - classpath:db/postgresql
