--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      JAVA_TOOL_OPTIONS: "-XX:+UseG1GC -Xms256m -Xmx512m"
+      DB_SSLMODE: "disable"
+      TESTCONTAINERS_RYUK_DISABLED: "true"
     strategy:
       matrix:
         profile: [test, integration-test]
