--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,14 +1,11 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8080/api
+VITE_API_BASE_URL=http://localhost:8080
 VITE_API_TIMEOUT=10000
 
 # App Configuration
 VITE_APP_NAME=Finance Forecast App
 VITE_APP_VERSION=1.0.0
 
-# Environment
-VITE_NODE_ENV=development
-
-# Feature Flags
-VITE_ENABLE_ANALYTICS=false
-VITE_ENABLE_DEBUG=true
+# Development
+VITE_DEBUG=true
+VITE_MOCK_API=false
