feat: Upgrade to Next.js 15 and update dependencies

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -41,7 +41,8 @@
         "src/types/*"
       ]
     },
-    "baseUrl": "."
+    "baseUrl": ".",
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
