--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "date-fns": "^3.2.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.307.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.0",
