--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,24 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@tanstack/react-query": "^5.17.9",
-    "axios": "^1.6.5",
-    "clsx": "^2.1.0",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.12.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.2.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.307.0",
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.4",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
