--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
-    "recharts": "^2.10.4",
+    "react-use-gesture": "^9.1.3",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
