--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.4",
     "tailwind-merge": "^2.6.0",
+    "use-debounce": "^10.0.6",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
