--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,17 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:performance": "jest --testPathPattern=performance",
+    "test:all": "npm run test && npm run test:e2e && npm run test:performance",
+    "lighthouse": "lhci autorun",
+    "lighthouse:ci": "lhci autorun --upload.target=temporary-public-storage",
+    "analyze": "npm run build && npx @next/bundle-analyzer",
+    "test:setup": "playwright install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -48,6 +58,9 @@
     "@types/node": "^24.3.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@playwright/test": "^1.40.0",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@lhci/cli": "^0.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^30.2.0",
