docs: Add comprehensive documentation
- Create comprehensive README with project overview, features, setup, and deployment
- Setup Storybook for component documentation with interactive examples
- Add component stories for Button, Input, and other UI components
- Create detailed API documentation with endpoints, examples, and error codes
- Add component documentation with usage examples and props documentation
- Create deployment guide for Docker, AWS, Vercel, and Netlify
- Add CI/CD pipeline configurations for GitHub Actions and GitLab
- Include monitoring setup with Sentry, Lighthouse CI, and Web Vitals
- Add troubleshooting guide for common deployment issues
- Create environment configuration examples for all deployment scenarios
- Add security best practices and performance optimization guides
- Include comprehensive testing documentation with examples
- Add accessibility guidelines and WCAG 2.1 AA compliance
- Create Storybook configuration with accessibility addons
- Add component prop documentation with TypeScript interfaces
- Include real-world usage examples and best practices
- Add support information and contact details for documentation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "lighthouse": "lhci autorun",
     "lighthouse:ci": "lhci autorun --upload.target=temporary-public-storage",
     "analyze": "npm run build && npx @next/bundle-analyzer",
-    "test:setup": "playwright install"
+    "test:setup": "playwright install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -61,6 +63,21 @@
     "@playwright/test": "^1.40.0",
     "@next/bundle-analyzer": "^14.2.5",
     "@lhci/cli": "^0.12.0",
+    "@storybook/addon-a11y": "^8.0.0",
+    "@storybook/addon-backgrounds": "^8.0.0",
+    "@storybook/addon-controls": "^8.0.0",
+    "@storybook/addon-docs": "^8.0.0",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/addon-measure": "^8.0.0",
+    "@storybook/addon-onboarding": "^8.0.0",
+    "@storybook/addon-outline": "^8.0.0",
+    "@storybook/addon-themes": "^8.0.0",
+    "@storybook/addon-viewport": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "storybook": "^8.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^30.2.0",
