feat: Add deployment configuration
- Configure production build optimization with environment variables and error tracking
- Setup Sentry integration for client, server, and edge runtime error monitoring
- Add comprehensive analytics configuration with Google Analytics, Mixpanel, and Web Vitals
- Create production Next.js configuration with security headers and optimizations
- Setup GitHub Actions CI/CD pipeline with automated testing, build, and deployment
- Add preview deployment workflow with Lighthouse audits and accessibility testing
- Configure Vercel deployment with environment variables and performance monitoring
- Create Docker production setup with multi-stage builds and health checks
- Add Docker Compose configuration for full-stack deployment with monitoring
- Setup Nginx reverse proxy with SSL, security headers, and rate limiting
- Create Prometheus and Grafana monitoring configuration
- Add comprehensive deployment scripts with environment validation
- Create production environment template with all required variables
- Add deployment documentation with multiple deployment options
- Include troubleshooting guide and rollback procedures
- Add security best practices and performance optimization guidelines
- Setup automated testing, security scanning, and performance monitoring
- Configure health checks and monitoring endpoints
- Add SSL/TLS configuration and security headers
- Include rate limiting and DDoS protection
- Setup log aggregation with Elasticsearch and Kibana
- Add comprehensive error tracking and performance monitoring
- Configure automated backups and disaster recovery
- Include scaling and load balancing configuration
- Add comprehensive monitoring and alerting setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,14 @@
     "analyze": "npm run build && npx @next/bundle-analyzer",
     "test:setup": "playwright install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deploy:staging": "vercel --target staging",
+    "deploy:production": "vercel --prod",
+    "deploy:preview": "vercel",
+    "analyze:build": "ANALYZE=true npm run build",
+    "type-check": "tsc --noEmit",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write ."
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -50,7 +57,9 @@
     "tailwind-merge": "^2.6.0",
     "use-debounce": "^10.0.6",
     "zod": "^3.25.76",
-    "zustand": "^4.5.7"
+    "zustand": "^4.5.7",
+    "@sentry/nextjs": "^8.0.0",
+    "@sentry/profiling-node": "^8.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
