--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Diagnostic: environment and secrets check
+      - name: "Diagnostic: environment and secrets check"
         run: |
           echo "Node version:" && node --version || true
           echo "NPM version:" && npm --version || true
