--- a/src/main/resources/postgresql-security.properties
+++ b/src/main/resources/postgresql-security.properties
@@ -50,7 +50,7 @@ app.security.database.encryption-enabled=true
 # Monitoring and Logging
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 spring.datasource.hikari.register-mbeans=true
 management.endpoint.hikaricp.enabled=true
 
