--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -160,34 +160,34 @@ spring:
 #    locations: classpath:db/migration
 
 ---
-spring:
-  config:
-    activate:
-      on-profile: integration-test
-  datasource:
-    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:postgresql:16:///financeapp?TC_TMPFS=/var/lib/postgresql/data:rw
-    hikari:
-      maximum-pool-size: 8
-      minimum-idle: 2
-      idle-timeout: 60000
-      max-lifetime: 300000
-      connection-timeout: 30000
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: false
-    properties:
-      hibernate:
-        jdbc:
-          time_zone: UTC
-        session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 200
-        generate_statistics: true
-  flyway:
-    enabled: true
-    locations:
-      - classpath:db/migration
-      - classpath:db/postgresql
+         # spring:
+          #config:
+            #activate:
+             # on-profile: integration-test
+          #datasource:
+           # driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+            #url: jdbc:tc:postgresql:16:///financeapp?TC_TMPFS=/var/lib/postgresql/data:rw
+            #hikari:
+             # maximum-pool-size: 8
+              #minimum-idle: 2
+              #idle-timeout: 60000
+             # max-lifetime: 300000
+              #connection-timeout: 30000
+          #jpa:
+           # hibernate:
+            #  ddl-auto: validate
+            #show-sql: false
+            #properties:
+             # hibernate:
+              #  jdbc:
+               #   time_zone: UTC
+                #session_events.log.LOG_QUERIES_SLOWER_THAN_MS: 200
+               # generate_statistics: true
+          #flyway:
+           # enabled: true
+            #locations:
+             # - classpath:db/migration
+              #- classpath:db/postgresql
 
 ---
 spring:
