--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@sentry/nextjs": "^8.0.0",
+    "@sentry/profiling-node": "^8.0.0",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.4",
     "@types/js-cookie": "^3.0.6",
@@ -47,6 +49,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "next": "^13.5.6",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
@@ -57,21 +60,12 @@
     "tailwind-merge": "^2.6.0",
     "use-debounce": "^10.0.6",
     "zod": "^3.25.76",
-    "zustand": "^4.5.7",
-    "@sentry/nextjs": "^8.0.0",
-    "@sentry/profiling-node": "^8.0.0"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@playwright/test": "^1.35.0",
-    "@next/bundle-analyzer": "^13.5.6",
     "@lhci/cli": "^0.12.0",
+    "@next/bundle-analyzer": "^13.5.6",
+    "@playwright/test": "^1.35.0",
     "@storybook/addon-a11y": "^7.6.0",
     "@storybook/addon-backgrounds": "^7.6.0",
     "@storybook/addon-controls": "^7.6.0",
@@ -83,13 +77,22 @@
     "@storybook/addon-viewport": "^7.6.0",
     "@storybook/nextjs": "^7.6.0",
     "@storybook/react": "^7.6.0",
-    "storybook": "^7.6.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.22",
+    "critters": "^0.0.25",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^1.3.0",
     "postcss": "^8",
+    "storybook": "^7.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
